--- a/app/package.json
+++ b/app/package.json
@@ -4,20 +4,24 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.0",
-    "node-sass-chokidar": "0.0.3",
-    "npm-run-all": "^4.1.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.16"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
+    "lint-css": "sass-lint",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
-    "build": "npm-run-all build-css build-js",
+    "build": "npm-run-all lint-css build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.2",
+    "node-sass-chokidar": "0.0.3",
+    "sass-lint": "^1.12.1"
   }
 }
