--- a/app/.env
+++ b/app/.env
@@ -1,5 +1,5 @@
 # This is not a real domain. In my hosts file it maps to localhost, with Apache using name-based virtual hosting.
-REACT_APP_API_BASE_URL=http://testsunrisesunsetmap.com/api/
+REACT_APP_BASE_URL=http://testsunrisesunsetmap.com/
 
 # Get a Google API key here: https://developers.google.com/maps/documentation/javascript/get-api-key
 # REACT_APP_SSMAP_GOOGLE_API_KEY=
