--- a/package.json
+++ b/package.json
@@ -3,11 +3,6 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "heroku-postbuild": "cd app && npm install && npm run build"
-  },
-  "devDependencies": {
-    "npm-run-all": "^4.1.2",
-    "node-sass-chokidar": "0.0.3",
-    "sass-lint": "^1.12.1"
+    "heroku-postbuild": "cd app && npm install --only=dev && npm install && npm run build"
   }
 }
