Set API key for heroku deployment

--- a/app/.env
+++ b/app/.env
@@ -2,4 +2,4 @@
 REACT_APP_BASE_URL=http://testsunrisesunsetmap.com/
 
 # Get a Google API key here: https://developers.google.com/maps/documentation/javascript/get-api-key
-# REACT_APP_SSMAP_GOOGLE_API_KEY=
+REACT_APP_SSMAP_GOOGLE_API_KEY=AIzaSyBlkd4z1Mr7ZiDdpDGmEEnH8zZKweKErGM
