--- a/app/package.json
+++ b/app/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
-    "detect-port-alt": "^1.1.5",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "^1.1.1"
+    "detect-port-alt": "^1.1.6",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-scripts": "^2.1.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
@@ -15,14 +15,21 @@
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
-    "build-js": "react-scripts build",
+    "build-js": "node ./scripts/build-non-split.js",
     "build": "npm-run-all lint-css build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.2",
-    "node-sass-chokidar": "0.0.3",
-    "sass-lint": "^1.12.1"
-  }
+    "node-sass-chokidar": "^1.3.4",
+    "npm-run-all": "^4.1.5",
+    "sass-lint": "^1.12.1",
+    "rewire": "^4.0.1"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
