--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.17.1",
+    "axios": "^0.20.0",
     "detect-port-alt": "^1.1.6",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -21,10 +21,10 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "node-sass-chokidar": "^1.3.4",
+    "node-sass-chokidar": "^1.5.0",
     "npm-run-all": "^4.1.5",
-    "sass-lint": "^1.12.1",
-    "rewire": "^4.0.1"
+    "rewire": "^4.0.1",
+    "sass-lint": "^1.12.1"
   },
   "browserslist": [
     ">0.2%",
